[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SnakeHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 8 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="SnakeHead" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="SnakeHead"]
current = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SnakeHead"]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
